--- a/index.html
+++ b/index.html
@@ -10,11 +10,27 @@
 <nav>
     <div class="nav-bar">
         <div class="nav-bar-left">
-            <div class="nav-left-"
+            <div class="nav-left-content">
+                <div class="logo-container">
+                    <div class="logo-image">
+                    </div>
+                </div>
+            </div>
             <div class="nav-bar-content">
                 <div class="nav-bar-selections">
 
                 </div>
+            </div>
+        </div>
+        <div class="nav-bar-right">
+            <div class="nav-selections-container">
+                <div class="nav-selections">BLOG</div>
+                <div class="nav-selections">ABOUT US</div>
+                <div class="nav-selections">MEET THE TEAM</div>
+                <div class="nav-selections">APPRAISAL SERVICES</div>
+                <div class="nav-selections">BUYERS</div>
+                <div class="nav-selections">SELLERS</div>
+                <div class="nav-selections">HOME</div>
             </div>
         </div>
     </div>
